# advent-of-code-python

./: .gitignore  README.md  pyproject.toml
advent_of_code/: input_requester.py  utils.py
advent_of_code/year_2024/: day_01.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py
aoc/: table.py  utils.py
aoc/year_2024/: day_03.py
aoc/year_2024/day_01/: README.md  __main__.py
aoc/year_2024/day_02/: README.md  __main__.py
output/: 2024_16
scripts/: lint.sh
tests/: test_table.py  test_utils.py
tests/data/: 2024_16_3
tests/year_2024/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_10.py  test_day_11.py  test_day_12.py  test_day_13.py  test_day_14.py  test_day_15.py  test_day_16.py  test_day_17.py  test_day_18.py  test_day_19.py  test_day_20.py
tests/year_2024/day_1/: test___main__.py
tests/year_2024/day_2/: test___main__.py
